--- a/templates/blocks/menu.html
+++ b/templates/blocks/menu.html
@@ -13,10 +13,10 @@
             <div id="menu-{{ loop.index }}" role="tabpanel" class="tab-pane {% if loop.index == 1 %}active{% endif %}">
                 <h1 class="menu-title">{{ menu.name }}</h1>
                 {% for item in menu.content %}
-                    <div id="menu-{{ item.type }}-{{ loop.index }}" class="menu-{{ item.type }}">
+                    <div id="menu-{{ item.type }}-{{ item.id }}" class="menu-{{ item.type }}">
                         <div>
                         {% if item.type == 'section' %}
-                            <h3 class="item-name">{{ item.name|e }}</h3>
+                            <h3 class="item-name">{{ item.name | e }}</h3>
                             <div class="item-description">{{ item.description }}</div>
 
                             {% if item.times.today %}
@@ -41,17 +41,24 @@
                                 <a data-href="/items/{{ item.id }}" data-add-menu-item="{{ item.id }}">
                                     <img class="image" src="{{ theme.path }}/img/menu-placeholder.png" {% if item.photo %}data-src="{{ item.photo }}"{% endif %}>
                                 </a>
+                                <div class="item-image-shade">
+                                    {% if customer %}
+                                        <div class="item-favorite">
+                                            <div ng-class="{active: isFavorite(item)}" ng-click="toggleFavorite(item)"></div>
+                                        </div>
+                                    {% endif %}
+                                    <div class="item-name">
+                                        <a href="#" data-add-menu-item="{{ item.id }}">{{ item.name | e }}</a>
+                                    </div>
+                                </div>
                             </div>
-
                             <div class="item-info">
-                                <div class="item-name">
-                                    <a href="#" data-add-menu-item="{{ item.id }}">{{ item.name|e }}</a>
+                                <div class="item-flags">
                                     {% if item.flag_recommended %}<img src="{{ theme.path }}/img/star.png" alt="recommended">{% endif %}
                                     {% if item.flag_spicy %}<img src="{{ theme.path }}/img/spicy.png" alt="spicy">{% endif %}
                                     {% if item.flag_veggie %}<img src="{{ theme.path }}/img/veggie.png" alt="veggie">{% endif %}
                                     {% if item.flag_healthy %}<img src="{{ theme.path }}/img/healthy.png" alt="healthy">{% endif %}
                                 </div>
-
                                 <div class="item-variants">
                                     {% for variant in item.variants %}
                                         <div class="variant">
@@ -61,23 +68,18 @@
                                                 </span>
                                             {% endif %}
                                             {% if variant.price > 0 %}
-                                                <span class="variant-price">
+                                                <b class="variant-price">
                                                     {{ variant.price  | currency }}
-                                                </span>
+                                                </b>
                                             {% endif %}
                                         </div>
+                                        {% if not loop.last %}
+                                        <span>/</span>
+                                        {% endif %}
                                     {% endfor %}
                                 </div>
-
-                                <div class="item-description">{{ item.description }}</div>
-
-                                {% if customer %}
-                                    <div class="item-favorite">
-                                        <div ng-class="{active: isFavorite(item)}" ng-click="toggleFavorite(item)"></div>
-                                    </div>
-                                {% endif %}
-
                             </div>
+                            <div class="item-description">{{ item.description }}</div>
                             {% if block.config.order_enabled %}
                                 <div class="item-add">
                                     <button data-add-menu-item="{{ item.id }}">Add</button>
