--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -14,6 +14,8 @@
     <title>{{name}}</title>
 
     {{head}}
+    <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700" rel="stylesheet">
+
     {{theme.styles}}
     {{theme.scripts}}
 </head>
