--- a/templates/blocks/menu.html
+++ b/templates/blocks/menu.html
@@ -15,77 +15,77 @@
                 {% for item in menu.content %}
                     <div id="menu-{{ item.type }}-{{ item.id }}" class="menu-{{ item.type }}">
                         <div>
-                        {% if item.type == 'section' %}
-                            <h3 class="item-name">{{ item.name | e }}</h3>
-                            <div class="item-description">{{ item.description }}</div>
+                            {% if item.type == 'section' %}
+                                <h3 class="item-name">{{ item.name | e }}</h3>
+                                <div class="item-description">{{ item.description }}</div>
 
-                            {% if item.times.today %}
-                                <div class="serving-hours">
-                                    <i class="fa fa-clock-o"></i>
-                                    <b>Serving hours: </b>
-                                    {% for time in item.times.today.times %}
-                                        <span>
-                                            {{ time.start }} - {{ time.end }}
-                                        </span>
-                                    {% endfor %}
-                                </div>
+                                {% if item.times.today.times.length %}
+                                    <div class="serving-hours">
+                                        <i class="fa fa-clock-o"></i>
+                                        <b>Serving hours: </b>
+                                        {% for time in item.times.today.times %}
+                                            <span>
+                                                {{ time.start }} - {{ time.end }}
+                                            </span>
+                                        {% endfor %}
+                                    </div>
+                                {% endif %}
                             {% endif %}
-                        {% endif %}
 
-                        {% if item.type == 'subsection' %}
-                            <div class="item-name">{{ item.name|e }}</div>
-                        {% endif %}
+                            {% if item.type == 'subsection' %}
+                                <div class="item-name">{{ item.name|e }}</div>
+                            {% endif %}
 
-                        {% if item.type == 'item' %}
-                            <div class="item-image">
-                                <a data-href="/items/{{ item.id }}" data-add-menu-item="{{ item.id }}">
-                                    <img class="image" src="{{ theme.path }}/img/menu-placeholder.png" {% if item.photo %}data-src="{{ item.photo }}"{% endif %}>
-                                </a>
-                                <div class="item-image-shade">
-                                    {% if customer %}
-                                        <div class="item-favorite">
-                                            <div ng-class="{active: isFavorite(item)}" ng-click="toggleFavorite(item)"></div>
+                            {% if item.type == 'item' %}
+                                <div class="item-image">
+                                    <a data-href="/items/{{ item.id }}" data-add-menu-item="{{ item.id }}">
+                                        <img class="image" src="{{ theme.path }}/img/menu-placeholder.png" {% if item.photo %}data-src="{{ item.photo }}"{% endif %}>
+                                    </a>
+                                    <div class="item-image-shade">
+                                        {% if customer %}
+                                            <div class="item-favorite">
+                                                <div ng-class="{active: isFavorite(item)}" ng-click="toggleFavorite(item)"></div>
+                                            </div>
+                                        {% endif %}
+                                        <div class="item-name">
+                                            <a href="#" data-add-menu-item="{{ item.id }}">{{ item.name | e }}</a>
                                         </div>
-                                    {% endif %}
-                                    <div class="item-name">
-                                        <a href="#" data-add-menu-item="{{ item.id }}">{{ item.name | e }}</a>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="item-info">
-                                <div class="item-flags">
-                                    {% if item.flag_recommended %}<img src="{{ theme.path }}/img/star.png" alt="recommended">{% endif %}
-                                    {% if item.flag_spicy %}<img src="{{ theme.path }}/img/spicy.png" alt="spicy">{% endif %}
-                                    {% if item.flag_veggie %}<img src="{{ theme.path }}/img/veggie.png" alt="veggie">{% endif %}
-                                    {% if item.flag_healthy %}<img src="{{ theme.path }}/img/healthy.png" alt="healthy">{% endif %}
-                                </div>
-                                <div class="item-variants">
-                                    {% for variant in item.variants %}
-                                        <div class="variant">
-                                            {% if item.variants|length > 1 %}
-                                                <span class="variant-name">
-                                                    {{ variant.name }}
-                                                </span>
+                                <div class="item-info">
+                                    <div class="item-flags">
+                                        {% if item.flag_recommended %}<img src="{{ theme.path }}/img/star.png" alt="recommended">{% endif %}
+                                        {% if item.flag_spicy %}<img src="{{ theme.path }}/img/spicy.png" alt="spicy">{% endif %}
+                                        {% if item.flag_veggie %}<img src="{{ theme.path }}/img/veggie.png" alt="veggie">{% endif %}
+                                        {% if item.flag_healthy %}<img src="{{ theme.path }}/img/healthy.png" alt="healthy">{% endif %}
+                                    </div>
+                                    <div class="item-variants">
+                                        {% for variant in item.variants %}
+                                            <div class="variant">
+                                                {% if item.variants|length > 1 %}
+                                                    <span class="variant-name">
+                                                        {{ variant.name }}
+                                                    </span>
+                                                {% endif %}
+                                                {% if variant.price > 0 %}
+                                                    <b class="variant-price">
+                                                        {{ variant.price  | currency }}
+                                                    </b>
+                                                {% endif %}
+                                            </div>
+                                            {% if not loop.last %}
+                                            <span>/</span>
                                             {% endif %}
-                                            {% if variant.price > 0 %}
-                                                <b class="variant-price">
-                                                    {{ variant.price  | currency }}
-                                                </b>
-                                            {% endif %}
-                                        </div>
-                                        {% if not loop.last %}
-                                        <span>/</span>
-                                        {% endif %}
-                                    {% endfor %}
+                                        {% endfor %}
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="item-description">{{ item.description }}</div>
-                            {% if block.config.order_enabled %}
-                                <div class="item-add">
-                                    <button data-add-menu-item="{{ item.id }}">Add</button>
-                                </div>
+                                <div class="item-description">{{ item.description }}</div>
+                                {% if block.config.order_enabled %}
+                                    <div class="item-add">
+                                        <button data-add-menu-item="{{ item.id }}">Add</button>
+                                    </div>
+                                {% endif %}
                             {% endif %}
-                        {% endif %}
                         </div>
                     </div>
                 {% endfor %}
