--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,7 +1,7 @@
 {% extends "layouts/full-page.html"  %}
 
 {% block content %}
-    <div class="home-banner" style="background-image: url({{ fields.home_background }})" data-custom-field="background-image:home_background">
+    <div class="home-banner">
         <div>
             <h1 class="title">
                 <img src="{{ fields.home_image }}" data-custom-field="src:home_image"><br>
@@ -17,6 +17,6 @@
         <div class="container">
             {{ content("main") }}
         </div>
-    </section>   
+    </section>
 
 {% endblock %}
