--- a/styles/main.scss
+++ b/styles/main.scss
@@ -138,7 +138,7 @@ a, a:hover, a:focus {
 }
 
 .main-content {
-    flex: 1;
+    flex-grow: 1;
     background: white;
     padding-top: 10px;
     padding-bottom: 30px;
