--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,4 +1,5 @@
 {% extends "layouts/full-page.html"  %}
+{% set home = true %}
 
 {% block content %}
     <div class="home-banner">
@@ -12,11 +13,9 @@
             {{ content('home-hero') }}
         </div>
     </div>
-
     <section class="main-content">
         <div class="container">
             {{ content("main") }}
         </div>
     </section>
-
 {% endblock %}
