--- a/styles/main.scss
+++ b/styles/main.scss
@@ -18,5 +18,6 @@ $colorG: #CCC;
 @import "header";
 @import "nav-menu";
 @import "home";
-@import "cart-dropdown";
+@import "quick-order";
 @import "common";
+@import "footer";
