--- a/templates/partials/navbar-simple.html
+++ b/templates/partials/navbar-simple.html
@@ -1,13 +1,6 @@
-<div class="navbar-container">
-    {% include "partials/color-bar.html" %}
-    <div class="container">
-        <nav class="navbar navbar-delirio" role="navigation">
-            <div class="navbar-header clearfix">
-                <a class="navbar-brand" href="/">
-                    <img src="{{ fields.nav_logo }}" data-custom-field="src:nav_logo" alt="{{ name }}">
-                </a>
-                {% block navbar %}{% endblock %}
-            </div>
-        </nav>
-    </div>
+{% include "partials/color-bar.html" %}
+<div class="navbar-simple">
+    <a href="/">
+        <img src="{{ fields.nav_logo_mobile }}" data-custom-field="src:nav_logo_mobile" alt="{{ name }}">
+    </a>
 </div>
