--- a/templates/partials/quick-order.html
+++ b/templates/partials/quick-order.html
@@ -1,5 +1,5 @@
 {% raw %}
-<div class="wrapper" ng-show="cart.items.length" >
+<div class="ng-cloak" ng-show="cart.items.length">
     <table class="table">
         <tr ng-repeat="item in cart.items">
             <td>
