--- a/templates/layouts/checkout.html
+++ b/templates/layouts/checkout.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 {% include "partials/head.html"  %}
-<body class="{{ fields.navbar_fixed }} {% if home == true %}home{% endif %}" data-custom-field="class:navbar_fixed">
+<body>
     {{ body }}
 
-    {% include "partials/navbar-full.html"  %}
+    {% include "partials/navbar-checkout.html"  %}
 
     {% block content %}{% endblock %}
 
@@ -13,6 +13,6 @@
     {% endblock %}
 
     {{ footer }}
-    {{theme.scripts}}
+    {{ theme.scripts }}
 </body>
 </html>
