--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -1,16 +1,15 @@
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" >
     <meta name="description" content="{{ meta.description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    {{meta.tags}}
+    {{ meta.tags }}
     <link rel="icon" href="{{ theme.path }}/img/favicon.png" type="image/x-icon" />
     <link rel="shortcut icon" href="{{ theme.path }}/img/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <title>{{name}}</title>
-    {{head}}
+    <title>{{ name }}</title>
     <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700" rel="stylesheet">
-    {{theme.styles}}
-    {{theme.scripts}}
+    {{ head }}
+    {{ theme.styles }}
 </head>
