--- a/styles/main.scss
+++ b/styles/main.scss
@@ -17,7 +17,8 @@ $colorG: #CCC;
 @import "mixins";
 @import "header";
 @import "nav-menu";
-@import "home";
 @import "quick-order";
+@import "home";
+@import "menu";
 @import "common";
 @import "footer";
