--- a/templates/partials/color-bar.html
+++ b/templates/partials/color-bar.html
@@ -1,6 +1,3 @@
-<div class="row color-bar">
-    <div class="col-xs-3" style="background-color: {{fields.colorA}}" data-custom-field="background-color:colorA"></div>
-    <div class="col-xs-3" style="background-color: {{fields.colorB}}" data-custom-field="background-color:colorB"></div>
-    <div class="col-xs-3" style="background-color: {{fields.colorC}}" data-custom-field="background-color:colorC"></div>
-    <div class="col-xs-3" style="background-color: {{fields.colorD}}" data-custom-field="background-color:colorD"></div>
+<div class="color-bar">
+    <div></div><div></div><div></div><div></div>
 </div>
