--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -1,4 +1,3 @@
-
 body {
     font-family: 'Oxygen', sans-serif;
     font-size: 18px;
@@ -7,17 +6,6 @@ body {
     min-height: 100vh;
     flex-direction: column;
 }
-
-// body.navbar-fixed {
-//     padding-top: 75px;
-//     .navbar-container {
-//         max-height: 75px;
-//         position: fixed;
-//         top: 0;
-//         left: 0;
-//         right: 0;
-//     }
-// }
 
 h1, h2, h3 {
     color: $colorA;
@@ -156,8 +144,23 @@ a, a:hover, a:focus {
 }
 
 .color-bar {
-    > div {
-        height: 8px;
+    display: flex;
+    width: 100%;
+    height: 8px;
+    div {
+        flex: 1;
+    }
+    div:nth-child(1) {
+        background-color: $colorA;
+    }
+    div:nth-child(2) {
+        background-color: $colorB;
+    }
+    div:nth-child(3) {
+        background-color: $colorC;
+    }
+    div:nth-child(4) {
+        background-color: $colorD;
     }
 }
 
@@ -664,165 +667,6 @@ i.creditcard.diners {
         }
     }
 }
-.block-menu {
-    .item-add {
-        button {
-            background-color: $colorA !important;
-        }
-    }
-    .menu-title {
-        color: $colorD !important;
-        text-align: center;
-    }
-    .menu-section {
-        background-color: transparent !important;
-        color: $colorD;
-        font-weight: 800;
-        margin: 0 10px;
-        text-align: center;
-        *zoom: 1;
-        clear: both;
-        &:before {
-            display: table;
-            line-height: 0;
-            content: "";
-        }
-        &:after {
-            clear: both;
-        }
-        .item-name {
-            font-size: 22px;
-            margin: 10px;
-        }
-        .cription {
-            color: #333;
-            font-size: 14px;
-            margin: 10px;
-        }
-        .serving-hours {
-            font-size: 12px;
-            margin: 0 10px;
-            color: #f9ab19;
-        }
-    }
-    .menu-subsection {
-        &:before {
-            display: table;
-            line-height: 0;
-            content: "";
-        }
-        color: $colorE;
-        font-weight: 800;
-        margin: 0 10px;
-        .item-name {
-            font-size: 20px;
-            margin: 12px 10px;
-            text-align: center;
-        }
-    }
-    .menu-item {
-        display: block;
-        float: left;
-        width: 100%;
-        > div {
-            position: relative;
-            margin: 10px;
-            border: 1px solid $colorA;
-            border-radius: 3px;
-            box-shadow: 0 2px 1px -1px #aaa;
-            overflow: hidden;
-        }
-        .item-image {
-            background-color: #EEEEEE;
-            position: relative;
-            .image {
-                width: 100%;
-                height: auto;
-                display: block;
-            }
-            .item-image-shade {
-                position: absolute;
-                width: 100%;
-                bottom: 0;
-                background-image: linear-gradient(to bottom, transparent 0%, $colorE 100%);
-                display: flex;
-                justify-content: flex-end;
-                flex-direction: column;
-                align-items: center;
-            }
-            .item-name {
-                font-size: 18px;
-                font-weight: 400;
-                margin: 40px 0 4px;
-                text-align: center;
-                a { color: #fff; }
-            }
-        }
-        .item-info {
-            padding: 7px;
-            display: flex;
-            .item-flags {
-                img {
-                    margin-right: 2px;
-                }
-            }
-            .item-variants {
-                flex: 1;
-                text-align: right;
-                .variant {
-                    display: inline-block;
-                    color: $colorD;
-                    font-size: 14px;
-                    font-weight: 700;
-                    padding-right: 7px;
-                }
-            }
-        }
-        .item-description {
-            padding: 7px;
-            color: $colorE;
-            font-size: 15px;
-            line-height: 20px;
-            height: 120px;
-            overflow: scroll;
-        }
-    }
-    .item-add {
-        padding: 5px;
-        height: 45px;
-        button {
-            border: none;
-            background-color: #999;
-            color: $colorF;
-            border-radius: 2px;
-            font-size: 14px;
-            font-weight: 500;
-            cursor: pointer;
-            padding: 7px 28px;
-            width: 100%;
-        }
-    }
-}
-
-.menu-subsection {
-    *zoom: 1;
-    clear: both;
-    &:after {
-        display: table;
-        line-height: 0;
-        content: "";
-        clear: both;
-    }
-}
-
-.menu-section {
-    &:after {
-        display: table;
-        line-height: 0;
-        content: "";
-    }
-}
-
 input.ng-dirty.ng-invalid {
     background-color: #fee;
 }
@@ -891,23 +735,10 @@ input.ng-dirty.ng-invalid {
 /***********************/
 /**** Media Queries ****/
 /***********************/
-@media (min-width: 468px) {
-    .block-menu {
-        .menu-item {
-            width: 50%;
-        }
-    }
-}
-
 @media (min-width: 768px) {
     .main-content {
         padding-top: 20px;
         padding-bottom: 40px;
-    }
-    .block-menu {
-        .menu-item {
-            width: 33.333%;
-        }
     }
 }
 
