--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -143,13 +143,15 @@ a, a:hover, a:focus {
     user-select: none;
 }
 
+.popover-image {
+    width: 100%;
+}
+
 .color-bar {
     display: flex;
     width: 100%;
     height: 8px;
-    div {
-        flex: 1;
-    }
+    div { flex: 1; }
     div:nth-child(1) {
         background-color: $colorA;
     }
