--- a/templates/partials/quick-order.html
+++ b/templates/partials/quick-order.html
@@ -1,48 +1,60 @@
-{% include "partials/color-bar.html" %}
-{% raw %}
-<div class="ng-cloak" ng-show="cart.items.length">
-    <table class="table">
-        <tr ng-repeat="item in cart.items">
-            <td>
-                <img class="image" ng-src="{{item.photo}}" ng-show="item.photo" height="40">
-            </td>
-            <td>
-                <b>{{item.name}}</b> {{item.variant}}
-                <div ng-repeat="choice in item.choices">
-                    <i>
-                        <span ng-repeat="option in choice.options">
-                            {{choice.name}}: {{option.name}}
-                        </span><br>
-                    </i>
-                </div>
-                <div ng-show="item.note" style="color:red"><b>Note:</b> {{item.note}}</div>
-            </td>
-            <td class="text-right">
-                <div class="input-group">
-                    <span class="input-group-addon qty-change noselect" ng-click="decrement(item, $event)">-</span><input class="form-control" aria-label="Quantity" type="tel" ng-model="item.qty" min="1" pattern="[0-9]*"><span class="input-group-addon qty-change noselect" ng-click="increment(item, $event)">+</span>
-                </div>
-            </td>
-            <td class="text-right">
-                <div class="amount">
-                    {{item.total | currency}}
-                </div>
-             </td>
-            <td>
-                <a class="remove" ng-click="remove(item, $event)"><i class="fa fa-times"></i></a>
-            </td>
-            <td>
-        </tr>
-    </table>
-    <div class="actions">
-        Subtotal <strong>{{cart.subtotal | currency}}</strong>
-        <div class="row">
-            <div class="col-xs-12 text-right">
-                <a class="btn checkout" href="/checkout">Checkout</a>
-            </div>
-        </div>
+<div class="cart-header">
+    <div class="container">
+        <h1 class="cart-title">Your Order</h1>
+        <button type="button" class="hide-quick-order">
+            <span class="sr-only">Close Cart</span>
+            <i class="fa fa-close"></i>
+        </button>
     </div>
 </div>
-<div class="wrapper" ng-hide="cart.items.length">
-    <p style="text-align:center;">No Items in your order</p>
+{% include "partials/color-bar.html" %}
+{% raw %}
+<div class="container ng-cloak">
+    <div class="cart-empty" ng-hide="cart.items.length">
+        <p>Your order is empty</p>
+    </div>
+    <div ng-show="cart.items.length">
+        <div class="cart-item" ng-show="cart.items.length" ng-repeat="item in cart.items">
+            <div class="cart-item-remove">
+                <a ng-click="remove(item, $event)">
+                    <i class="fa fa-times"></i>
+                </a>
+            </div>
+            <div class="cart-item-qty">
+                {{item.qty}}
+            </div>
+            <div class="cart-item-description">
+                <p class="cart-item-name">
+                    <b>{{item.name}}</b> {{item.variant}}
+                </p>
+                <ul class="cart-item-choices" ng-repeat="choice in item.choices">
+                    <li ng-repeat="option in choice.options">
+                        {{choice.name}}: {{option.name}}
+                    </li>
+                </ul>
+                <p class="cart-item-note" ng-show="item.note">
+                    <b>Note:</b> {{item.note}}
+                </p>
+            </div>
+            <div class="cart-item-qty-control">
+                <div>
+                    <button class="btn" ng-click="decrement(item, $event)">-</button>
+                </div>
+                <div>{{item.qty}}</div>
+                <div>
+                    <button class="btn" ng-click="increment(item, $event)">+</button>
+                </div>
+            </div>
+            <div class="cart-item-amount">
+                {{item.total | currency}}
+             </div>
+        </div>
+        <div class="cart-subtotal">
+            Subtotal <strong>{{cart.subtotal | currency}}</strong>
+        </div>
+        <div class="cart-actions">
+            <a class="btn" href="/checkout">Checkout</a>
+        </div>
+    </div>
 </div>
 {% endraw %}
