--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -5,6 +5,17 @@
     .menu-name {
         width: 100%;
         margin: 30px 0 10px;
+        font-size: 20px;
+        @media (min-width: 768px) {
+            font-size: 36px;
+        }
+        text-align: center;
+        @media (min-width: 480px) {
+            text-align: left;
+        }
+        a {
+            color: $colorA;
+        }
     }
 }
 
@@ -16,9 +27,17 @@
         color: $colorD;
         text-decoration: underline;
         margin: 4px 8px;
+        font-size: 18px;
+        @media (min-width: 768px) {
+            font-size: 22px;
+        }
     }
     .section-description {
         color: #777;
+        font-size: 12px;
+        @media (min-width: 768px) {
+            font-size: 16px;
+        }
     }
 }
 
@@ -38,7 +57,9 @@
     padding: 8px 16px;
     border: 1px solid transparent;
     transition: all 0.3s;
+    font-size: 12px;
     @media (min-width: 768px) {
+        font-size: 18px;
         flex-basis: 50%;
     }
     &:hover {
