--- a/styles/_quick-order.scss
+++ b/styles/_quick-order.scss
@@ -115,12 +115,24 @@
     font-size: 22px;
     text-align: center;
     margin-bottom: 16px;
+    @media (min-width: 768px) {
+        text-align: right;
+    }
 }
 
 .cart-actions {
     margin-bottom: 16px;
     display: flex;
+    text-align: right;
     .btn {
         flex: 1;
+    }
+    @media (min-width: 768px) {
+        display: block;
+        .btn {
+            font-size: 20px;
+            padding-left: 20px;
+            padding-right: 20px;
+        }
     }
 }
