--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -1,5 +1,6 @@
 .home-banner {
     background-size: cover;
+    background-position: 50% 0px;
     height: 400px;
     display: flex;
     flex-direction: column;
