--- a/styles/_nav-menu.scss
+++ b/styles/_nav-menu.scss
@@ -1,7 +1,8 @@
 .customer-nav {
     list-style-type: none;
     padding: 0;
-    font-size: 18px;
+    font-size: 16px;
+    font-weight: 700;
     li {
         margin: 6px 12px 6px 6px;
         a {
@@ -33,6 +34,7 @@
         float: right;
         padding: 0;
         margin: 0;
+        font-weight: 700;
         .navbar-pages-root {
             margin: 0;
             display: inline-block;
@@ -51,21 +53,21 @@
                     list-style-type: none;
                     a {
                         text-transform: lowercase;
-                        font-size: 16px;
+                        font-size: 18px;
                         padding: 14px 10px;
                     }
                 }
             }
             > a {
                 text-transform: lowercase;
-                font-size: 22px;
+                font-size: 18px;
                 padding: 10px 15px;
                 text-align: right;
             }
             &:hover > ul {
                 display: block;
                 a {
-                    font-size: 22px;
+                    font-size: 18px;
                 }
             }
             a:focus, a:hover {
