--- a/templates/pages/checkout.html
+++ b/templates/pages/checkout.html
@@ -1,15 +1,15 @@
 {% extends "layouts/checkout.html"  %}
-
-{% block navbar %}
-    <div class="header-lock">
-        <i class="fa fa-lock"></i>
-    </div>
-{% endblock %}
-
 {% block content %}
     <section class="main-content">
         <div class="container">
             {{ content("main") }}
         </div>
     </section>
+{% endblock %}
+
+{% block footer %}
+    {% include 'partials/color-bar.html' %}
+    <footer style="background-color: {{fields.colorA}}" data-custom-field="background-color:colorA">
+        <div class="footer-copywrite">&copy; 2017 Delirio Fresh Co.</div>
+    </footer>
 {% endblock %}
