--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -195,98 +195,10 @@ a, a:hover, a:focus {
     }
 }
 
-.menu-item-modal {
-    .modal-header {
-        h1 {
-            color: $colorD;
-            font-size: 24px;
-        }
-    }
-    .modal-footer {
-        button {
-            background-color: $colorD;
-            color: $colorF;
-            cursor: pointer;
-            margin: 7px;
-        }
-    }
-    .modal-content {
-        margin: 0px 20px;
-        min-height: 80px;
-        font-size: 14px;
-        color: $colorE;
-        h3 {
-            font-size: 20px;
-            font-weight: 600;
-            margin: 7px 0;
-        }
-    }
-    .choices {
-        label {
-            font-size: 12px;
-            i {
-                font-weight: 600;
-            }
-        }
-        .checkbox {
-            margin-bottom: 4px;
-        }
-    }
-    .options {
-        h3 {
-            display: inline-block;
-            margin-right: 14px;
-        }
-        .radio {
-            display: inline-block;
-            margin: 0 20px;
-        }
-    }
-    fieldset {
-        padding: 0 14px 0;
-        .checkbox {
-            width: 50%;
-            display: inline-block;
-        }
-    }
-    legend {
-        font-size: 14px;
-        font-weight: 600;
-        position: relative;
-        margin: 0;
-        left: -14px;
-    }
-    .note {
-        label {
-            display: block;
-        }
-    }
-    .qty {
-        min-width: 150px;
-        width: 150px;
-        display: inline-block;
-        margin-top: 0px;
-        padding: 0;
-        vertical-align: middle;
-        input {
-            text-align: center;
-            font-weight: 500;
-        }
-    }
-    .qty-change {
-        cursor: pointer;
-    }
-}
-
 .btn-success {
     background-color: $colorA !important;
 }
 
-.item-add {
-    button {
-        background-color: $colorA !important;
-    }
-}
 
 .btn-primary {
     color: $colorF;
@@ -299,67 +211,6 @@ a, a:hover, a:focus {
     font-size: 12px;
 }
 
-.order-count {
-    margin: 24px 40px;
-    position: absolute;
-}
-
-// .order-dropdown {
-//     display: inline-block;
-//     .input-group-addon {
-//         width: inherit;
-//     }
-//     .dropdown-toggle {
-//         color: $colorF;
-//         background-color: $colorA;
-//         border: none;
-//         border-radius: 0;
-//         font-size: 16px;
-//         font-weight: 500;
-//         line-height: 1.2;
-//         padding: 4px 15px;
-//     }
-//     .dropdown-menu {
-//         max-height: calc(100vh - 40px);
-//         min-width: 340px;
-//         left: auto;
-//         right: 0;
-//         padding: 0;
-//         overflow: scroll;
-//     }
-//     .wrapper {
-//         padding: 8px;
-//     }
-//     .remove {
-//         color: $colorD;
-//         cursor: pointer;
-//     }
-//     input {
-//         padding: 0;
-//         text-align: center;
-//     }
-//     .qty-change {
-//         cursor: pointer;
-//     }
-//     [aria-label="Quantity"] {
-//         min-width: 50px;
-//         width: 50px;
-//     }
-//     .actions {
-//         text-align: center;
-//     }
-//     .checkout {
-//         border: none;
-//         background-color: $colorA !important;
-//         color: $colorF;
-//         border-radius: 2px;
-//         font-size: 14px;
-//         font-weight: 500;
-//         cursor: pointer;
-//         padding: 7px 28px;
-//         width: 100%;
-//     }
-// }
 
 legend {
     margin: 0px 0 10px;
@@ -406,247 +257,8 @@ legend {
     font-weight: 200;
 }
 
-/* Checkout form */
-.header-lock {
-    color: $colorA;
-    text-align: center;
-    position: absolute;
-    left: 150px;
-    right: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    font-size: 40px;
-    top: 0;
-    opacity: 0.4;
-}
-
-i.creditcard {
-    display: inline-block;
-    width: 50px;
-    height: 30px;
-    line-height: 1px;
-    margin: 0 0 -15px;
-}
-
-i.creditcard.visa {
-    background-image: url(theme-path("img/visa.gif"));
-}
-
-i.creditcard.mastercard {
-    background-image: url(theme-path("img/mastercard.gif"));
-}
-
-i.creditcard.american {
-    background-image: url(theme-path("img/amex.gif"));
-}
-
-i.creditcard.amex {
-    background-image: url(theme-path("img/amex.gif"));
-}
-
-i.creditcard.discover {
-    background-image: url(theme-path("img/discover.gif"));
-}
-
-i.creditcard.diners {
-    background-image: url(theme-path("img/dinersclub.gif"));
-}
-
-.order-type, .order-schedule {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
-    input[type=radio] {
-        display: none;
-        margin: 10px;
-        & + label {
-            border-bottom: 2px solid transparent;
-            display: inline-block;
-            margin-right: 16px;
-            padding: 0;
-            background-color: #fff;
-            transition: 0.2s;
-            -webkit-transition: .2s;
-            text-align: center;
-            cursor: pointer;
-            &:after {
-                width: 30px;
-                font-family: FontAwesome;
-                font-size: 20px;
-                content: "\f096";
-                color: $colorG;
-                display: inline-block;
-                position: relative;
-                top: 3px;
-            }
-        }
-        &:checked {
-            & + label {
-                border-bottom: 2px solid $colorB;
-                &:after {
-                    content: "\f046";
-                    color: $colorA;
-                }
-            }
-        }
-    }
-}
-
-.order-schedule-date {
-    text-align: center;
-    .select-container {
-        display: flex;
-        justify-content: center;
-        margin-bottom: 20px;
-        select {
-            width: 140px;
-        }
-    }
-}
-
-.checkout-address-select {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
-    > div {
-        width: 200px;
-        padding: 2px;
-        flex: 1;
-    }
-    input[type=radio] {
-        display: none;
-        margin: 10px;
-        & + label {
-            cursor: pointer;
-            border: 1px solid #ccc;
-            color: #ccc;
-            font-size: 14px;
-            font-weight: 500;
-            margin: 0;
-            transition: 0.2s;
-            -webkit-transition: 0.2s;
-            padding: 10px 15px;
-            min-height: 110px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            border-radius: 2px;
-            &:hover, &:focus {
-                border: 1px solid $colorE;
-                z-index: 2;
-                .checkout-gratitude-percentage {
-                    color: $colorE;
-                }
-            }
-        }
-        &:checked {
-            & + label {
-                border: 1px solid $colorA;
-                color: $colorA;
-            }
-        }
-    }
-    [for="address-select-new"] {
-        text-align: center;
-    }
-}
-
-.checkout-gratitude {
-    .checkout-gratitude-options {
-        display: flex;
-        justify-content: center;
-        margin-bottom: 20px;
-        button {
-            background-color: $colorF;
-            border: 1px solid $colorG;
-            flex: 1;
-            margin-right: -1px;
-            max-width: calc(20% + 4px / 5);
-            outline: none;
-            overflow: hidden;
-            padding: 0;
-            text-align: center;
-            transition: .2s;
-            -webkit-transition: .2s;
-            &:first-child {
-                border-bottom-left-radius: 2px;
-                border-top-left-radius: 2px;
-            }
-            &:last-child {
-                border-bottom-right-radius: 2px;
-                border-top-right-radius: 2px;
-            }
-            &:hover, &:focus {
-                border: 1px solid $colorE;
-                z-index: 2;
-                .checkout-gratitude-percentage {
-                    color: $colorE;
-                }
-            }
-        }
-        .checkout-gratitude-percentage {
-            color: $colorG;
-            font-size: 16px;
-            font-weight: 500;
-            transition: .2s;
-        }
-        .checkout-gratitude-amount {
-            color: $colorG;
-            font-size: 12px;
-            font-weight: 500;
-        }
-        button.active {
-            border: 1px solid $colorD;
-            z-index: 1;
-            .checkout-gratitude-percentage {
-                color: $colorD;
-            }
-            .checkout-gratitude-amount {
-                color: $colorD;
-            }
-        }
-    }
-}
-
-.order-view {
-    .btn-checkout {
-        background-color: $colorA;
-        border-radius: 0;
-        font-size: 16px;
-        font-weight: 500;
-        border: none;
-        &:hover {
-            background-color: $colorA;
-        }
-    }
-    .quantity {
-        width: 150px;
-        input {
-            text-align: center;
-        }
-    }
-    .qty-change {
-        cursor: pointer;
-    }
-    .actions {
-        width: 40px;
-        text-align: center;
-    }
-    .subtotal {
-        padding: 25px 0 10px 0;
-    }
-}
-
 [data-adaptive-bg] {
     opacity: 0;
-}
-
-.order-summary {
-    .choices {
-        font-size: 12px;
-    }
 }
 
 .center {
@@ -733,6 +345,41 @@ input.ng-dirty.ng-invalid {
         }
     }
 }
+
+/* Checkout form */
+i.creditcard {
+    display: inline-block;
+    width: 25px;
+    height: 15px;
+    background-size: 25px 15px;
+    line-height: 1px;
+    margin: 0 0 -2px;
+    &.visa {
+        background-image: url(theme-path("img/visa.gif"));
+    }
+
+    &.mastercard {
+        background-image: url(theme-path("img/mastercard.gif"));
+    }
+
+    &.american {
+        background-image: url(theme-path("img/amex.gif"));
+    }
+
+    &.amex {
+        background-image: url(theme-path("img/amex.gif"));
+    }
+
+    &.discover {
+        background-image: url(theme-path("img/discover.gif"));
+    }
+
+    &.diners {
+        background-image: url(theme-path("img/dinersclub.gif"));
+    }
+}
+
+
 
 /***********************/
 /**** Media Queries ****/
