--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -13,3 +13,39 @@
     box-shadow: 1px 1px 1px 1px #eee;
     left: $left;
 }
+
+@mixin checkout-radio() {
+    display: none;
+    margin: 10px;
+    & + label {
+        border-bottom: 2px solid transparent;
+        display: inline-block;
+        margin-right: 16px;
+        padding: 0;
+        background-color: #fff;
+        color: $colorE;
+        transition: 0.2s;
+        -webkit-transition: .2s;
+        text-align: center;
+        cursor: pointer;
+        &:before {
+            width: 30px;
+            font-family: FontAwesome;
+            font-size: 18px;
+            content: "\f096";
+            color: $colorG;
+            display: inline-block;
+            position: relative;
+            top: 1px;
+        }
+    }
+    &:checked {
+        & + label {
+            border-bottom: 2px solid $colorA;
+            &:before {
+                content: "\f046";
+                color: $colorA;
+            }
+        }
+    }
+}
