--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,7 +13,12 @@ $colorD: get-field("colorD");
 $colorE: #555;
 $colorF: #FFF;
 $colorG: #CCC;
+$border-color: #CCC;
 
+html, body {
+    overflow-x: hidden;
+    width: 100%;
+}
 @import "mixins";
 @import "header";
 @import "nav-menu";
@@ -21,5 +26,5 @@ $colorG: #CCC;
 @import "home";
 @import "menu";
 @import "common";
-@import "checkout";
+@import "checkout/checkout";
 @import "footer";
