--- a/templates/pages/order-complete.html
+++ b/templates/pages/order-complete.html
@@ -1,4 +1,4 @@
-{% extends "layouts/headless.html"  %}
+{% extends "layouts/full-page.html"  %}
 
 {% block content %}
     <section class="main-content">
