--- a/styles/checkout/_checkout.scss
+++ b/styles/checkout/_checkout.scss
@@ -26,7 +26,7 @@
             border: none;
             .checkout-form-toc {
                 font-size: 14px;
-                $colorG:
+                color: $colorG;
             }
             .checkout-form-button button {
                 font-size: 24px;
